--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -1,3 +1,17 @@
+<style>
+  .logout-menu{
+    background-color: var(--dark-color);
+    position: absolute;
+    right: -25px;
+    bottom: -80px !important;
+    padding: 7px 0;
+    border-radius: 3px;
+  }
+  .logout-menu li:last-child{
+    margin-top: 12px !important;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg sticky-top">
   <div class="container-fluid">
       <div class="logo">
@@ -38,7 +52,6 @@
         {% endif %}
 
 
-
        {% if request.user.is_authenticated and request.user.is_staff %}
             <div class="reg-buttons flex-column align-items-center gap-4 gap-lg-2 flex-lg-row">
                 <a href="{% url 'createNewClub' %}"><button type="button" class="logout-btn btn">Create New Club</button></a>
@@ -60,10 +73,14 @@
       {% endif %}
       </a>
         <div class="profile-container d-lg-flex align-items-lg-center gap-1">
-        <div class="profile-letter">N</div>
+        <div class="profile-letter">C</div>
         <i class="fa-solid fa-caret-down"></i>
         </div>
        <ul class="logout-menu hidden-logout">
+        {% if request.user.is_authenticated and request.user.is_superuser and not request.user.is_staff %}
+        <li><a href="#">My Club</a></li>
+        {% endif %}
+
         <li><a href="{% url 'logout' %}">Logout</a></li>
        </ul>
       </div>
