--- a/templates/pages/sks-admin-interface/admin-notifications.html
+++ b/templates/pages/sks-admin-interface/admin-notifications.html
@@ -100,7 +100,7 @@
 
     <div class="all-features-container">
     <div class="notif-container">
-      <form method="post" action="">
+      <form method="post" action="{% url 'approve_or_reject_event' %}">
             {% csrf_token %}
         <div class="activities-notif-container">
             <h4>Event Activity Requests</h4>
@@ -114,45 +114,52 @@
              <div class="req-text-checkboxes">
                 <img src="{{act.clubname.profileimg.url}}" alt="club logo">
                 <div class="req-text"><strong class="club-name">{{act.clubname}}</strong> sent an event activity request <span class="view-interface-btn">view</span></div>
+
                 <div class="decision-buttons">
 
+                    {% if act.approved %}
                     <div class="check-container">
-                      <label for="reason">Approve</label>
-                      {% if act.approved %}
-                      <input class="accept-check" type="checkbox" value={{act.id}} checked
-                      name="boxes">
-                      {% else %}
-                      <input class="accept-check" type="checkbox" value={{act.id}}
-                      name="boxes">
-                      {% endif %}
+                        <label for="approve_{{ act.id }}">Approve</label>
+                        <input class="accept-check" type="checkbox" checked id="approve_{{ act.id }}" value="{{ act.id }}" name="approve">
                     </div>
+                    {% else %}
                     <div class="check-container">
-                      <label for="reason">Reject</label>
-                      {% if act.rejected %}
-                      <input class="reject-check" type="checkbox" value={{act.id}} checked
-                      name="boxes2">
-                      {% else %}
-                      <input class="reject-check" type="checkbox" value={{act.id}}
-                      name="boxes2">
-                      {% endif %}
-                   </div>
+                        <label for="approve_{{ act.id }}">Approve</label>
+                        <input class="accept-check" type="checkbox"  id="approve_{{ act.id }}" value="{{ act.id }}" name="approve">
+                    </div>
+                    {% endif %}
+
+                    {% if act.rejected %}
+                    <div class="check-container">
+                        <label for="reject_{{ act.id }}">Reject</label>
+                        <input class="reject-check" type="checkbox" checked id="reject_{{ act.id }}" value="{{ act.id }}" name="reject">
+                    </div>
+                    {% else %}
+                    <div class="check-container">
+                        <label for="reject_{{ act.id }}">Reject</label>
+                        <input class="reject-check" type="checkbox"  id="reject_{{ act.id }}" value="{{ act.id }}" name="reject">
+                    </div>
+                    {% endif %}
+
+                    <div >
+                        <label for="reason">Rejection Reason:</label>
+                        <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
+                    </div>
+
+
                 </div>
             </div>
 
-                <div class="form-group">
-                    <label for="reason">Rejection Reason:</label>
-                     <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
-                   </div>
+
             </div>
+
             {% endfor %}
+        </div> 
+        <input type="submit" class="accept-reject-btn submit-purpose-btn" value="Submit">
         </div>
-        <button class="accept-reject-btn update-approval" name="update_activities"  type="submit">Update approval</button>
-        <button class="accept-reject-btn update-reject" name="update_reject"  type="submit">Update reject</button>
-        <button type="submit" class="accept-reject-btn submit-purpose-btn">Submit</button>        
-  </div>
       </form>
 
-    <form method="post" action="">
+    <form method="post" action="{% url 'approve_or_reject_post' %}">
         {% csrf_token %}
     <div class="posts-notif-container">
         <h4>Event Post Requests</h4>
@@ -165,48 +172,48 @@
                 <img src="{{post.clubname.profileimg.url}}" alt="club logo">
                 <div class="req-text"><strong class="club-name">{{post.clubname}}</strong> sent an event post request <span class="view-interface-btn">view</span></div>
                 <div class="decision-buttons">
-                    <div class="check-container">
-                        <label for="reason">Approve</label>
-
                         {% if post.approved %}
-                           <input class="accept-check" type="checkbox" value={{post.id}} checked
-                           name="boxes">
-                           {% else %}
-                           <input class="accept-check" type="checkbox" value={{post.id}}
-                           name="boxes">
-                           {% endif %}
-                   </div>
-                       
-                   <div class="check-container">
-                           <label for="reason">Reject</label>
-                           {% if post.rejected %}
-                           <input class="reject-check" type="checkbox" value={{post.id}} checked
-                           name="boxes2">
-                           {% else %}
-                           <input class="reject-check" type="checkbox" value={{post.id}}
-                           name="boxes2">
-                           {% endif %}
-                   </div>
+                        <div class="check-container">
+                            <label for="approve_{{ post.id }}">Approve</label>
+                            <input class="accept-check" type="checkbox" checked id="approve_{{ post.id }}" value="{{ post.id }}" name="approve">
+                        </div>
+                        {% else %}
+                        <div class="check-container">
+                            <label for="approve_{{ post.id }}">Approve</label>
+                            <input class="accept-check" type="checkbox"  id="approve_{{ post.id }}" value="{{ post.id }}" name="approve">
+                        </div>
+                        {% endif %}
+
+                        {% if post.rejected %}
+                        <div class="check-container">
+                            <label for="reject_{{ post.id }}">Reject</label>
+                            <input class="reject-check" type="checkbox" checked id="reject_{{ post.id }}" value="{{ post.id }}" name="reject">
+                        </div>
+                        {% else %}
+                        <div class="check-container">
+                            <label for="reject_{{ Post.id }}">Reject</label>
+                            <input class="reject-check" type="checkbox"  id="reject_{{ post.id }}" value="{{ post.id }}" name="reject">
+                        </div>
+                        {% endif %}
+
+                        <div >
+                            <label for="reason">Rejection Reason:</label>
+                            <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
+                        </div>
+                
                  </div>
                  
-            </div>
-            
+            </div>     
         
-        <div class="form-group">
-            <label for="reason">Rejection Reason:</label>
-                <input type="text" class="form-control" name="reason" id="reason" placeholder="Enter rejection reason">
-            </div>
     </div>
     {% endfor %}
         
         </div> 
-        <button class="accept-reject-btn update-approval" name="update_posts"  type="submit">Update approval</button>
-        <button class="accept-reject-btn update-reject" name="update_reject_post"  type="submit">Update reject</button>
-        <button type="submit" class="accept-reject-btn submit-purpose-btn">Submit</button>
-    </div>
+        <input type="submit" class="accept-reject-btn submit-purpose-btn" value="Submit">
+        </div>
     </form>       
 
-        <form method="post" action="">
+        <form method="post" action="{% url 'approve_or_reject_edited_post' %}">
             {% csrf_token %}
             <div class="edits-notif-container">
                 <h4>Edit Event Requests</h4>
